# thesis_ws

./: .gitignore  .gitmodules
src/dvs_displayer/include/dvs_displayer/: displayer.h
src/dvs_displayer/launch/: display_monocular.launch
src/dvs_displayer/src/: displayer.cpp
src/dvs_stereo/: CMakeLists.txt  package.xml  thesis_test.perspective
src/dvs_stereo/include/: dvs_read_txt.h  dvs_stereo.h
src/dvs_stereo/launch/: read_txt.launch  stereo_dvs.launch
src/dvs_stereo/src/: dvs_stereo.cpp  dvs_stereo_node.cpp
src/dvs_txt/: CMakeLists.txt  package.xml
src/dvs_txt/include/: dvs_read_txt.h
src/dvs_txt/launch/: read_metavision_txt.launch  read_txt.launch
src/dvs_txt/src/: dvs_read_txt.cpp  dvs_read_txt_node.cpp
src/metavision_hal_sync_ros/: CMakeLists.txt  commands.txt  metavision_hal_sync.cpp  package.xml
src/metavision_hal_sync_ros/launch/: metavision_hal_sync_ros_master.launch  metavision_hal_sync_ros_slave.launch
