<?xml version="1.0"?>
<package format="2">
  <name>dvs_txt</name>
  <version>0.0.0</version>
  <description>The dvs_txt package. Simple example to work with event data</description>
  <maintainer email="guillermo.gallego@tu-berlin.de">Guillermo Gallego</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>dvs_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>

  <export>
  </export>

</package>
